프론트 부분 하위폴더로 이동

--- a/to-do-list-front/package.json
+++ b/to-do-list-front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-js-quasar-practice",
+  "name": "to-do-list-front",
   "version": "0.0.1",
   "description": "A Quasar Project",
   "productName": "Quasar App",
