--- a/to-do-list-front/package.json
+++ b/to-do-list-front/package.json
@@ -10,13 +10,15 @@
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
-    "build": "quasar build"
+    "build": "quasar build",
+    "serve": "vue-cli-service serve"
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "@quasar/quasar-ui-qcalendar": "^4.0.0-beta.15",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
+    "dotenv": "^16.3.1",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.2.4"
