--- a/to-do-list-back-single-module/build.gradle
+++ b/to-do-list-back-single-module/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation('io.jsonwebtoken:jjwt:0.9.1')
+    implementation('com.auth0:java-jwt:3.19.2')
+    implementation 'javax.xml.bind:jaxb-api:2.3.0'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
