로그인 회원가입 완성, todo 작업시작

--- a/to-do-list-back-single-module/src/main/resources/application.yml
+++ b/to-do-list-back-single-module/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
 
 
 mybatis:
-  type-aliases-package: com.jiinkim.todolist.user.model, com.jiinkim.todolist.todo.model
-  mapper-locations: classpath:mybatis/mappers/*.xml
+  type-aliases-package: com.jiinkim.todolist.todo.model,com.jiinkim.todolist.user.model
+  mapper-locations: classpath:mybatis/mappers/**/*.xml
 
 
