--- a/to-do-list-front/package.json
+++ b/to-do-list-front/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
+    "pinia": "^2.1.6",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.2.4"
