--- a/to-do-list-back-single-module/src/main/resources/application.yml
+++ b/to-do-list-back-single-module/src/main/resources/application.yml
@@ -1,12 +1,31 @@
 spring:
   datasource:
-    driver-class-name: oracle.jdbc.OracleDriver
-    url: jdbc:oracle:thin:@localhost:1521/xe
+    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+    url: jdbc:log4jdbc:oracle:thin:@localhost:1521/xe
     username: todouser
     password: 1234
+
+  #      driverClassName: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+  #      url: jdbc:log4jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
+
   profiles:
     include:
       - env
 
+logging:
+  level:
+    com:
+      zaxxer:
+        hikari: INFO
+    javax:
+      sql:
+        DataSource: OFF
+    jdbc:
+      audit: OFF # JDBC 트러블슈팅 경우를 제외하고는 사용 권장 X
+      resultset: OFF # ResultSet을 포함한 모든 JDBC 호출 정보를 출력
+      resultsettable: INFO  #SQL 결과 데이터 Table형식으로 출력
+      sqlonly: INFO     #SQL만 로그만 출력
+      sqltiming: OFF    #SQL + 소요시간 출력
+      connection: OFF  # 커넥션 연결/종료 정보 출력
 
 
