--- a/to-do-list-front/package.json
+++ b/to-do-list-front/package.json
@@ -37,11 +37,14 @@
     "eslint-plugin-vue": "^9.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "postcss": "^8.4.14",
-    "prettier": "^2.5.1"
+    "prettier": "^2.8.8"
   },
   "engines": {
     "node": "^18 || ^16 || ^14.19",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
+  },
+  "prettier": {
+    "tabWidth": 4
   }
 }
